--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,223 @@
-<HTML>
-<Head>
-</Head>
-<Body>
-</Body>
-</HTML>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<title>index</title>
+<meta charset="utf-8">
+<style>
+/*For the nav bar*/
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #507180;
+}
+li {
+	float: left;
+}
+li a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+* {box-sizing: border-box;}
+body {
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+	overflow: hidden;
+	background-color: #e9e9e9;
+}
+
+.topnav a {
+	float: none;
+	display: block;
+	color: black;
+	text-align: center;
+	padding: 14px 16px;
+	font-size: 25px;
+}
+
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.topnav a.active {
+	background-color: #2196F3;
+	color: white;
+}
+
+
+.topnav input[type=text] {
+	padding: 6px;
+	margin-top: 8px;
+	font-size: 25px;
+	border: none;
+}
+
+.topnav .search-container button {
+	float: none;
+	padding: 6px 10px;
+	margin-top: 8px;
+	margin-right: 16px;
+	background: #ddd;
+	font-size: 17px;
+	border: none;
+	cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+	background: #ccc;
+}
+
+
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
+}
+
+/* Caption text */
+.text {
+	color: #f2f2f2;
+	font-size: 15px;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 8px;
+	width: 100%;
+	text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+
+.active {
+	background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+	-webkit-animation-name: fade;
+	-webkit-animation-duration: 1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+	from {opacity: .4} 
+	to {opacity: 1}
+}
+
+@keyframes fade {
+	from {opacity: .4} 
+	to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+	.text {font-size: 11px}
+}
+
+</style>
+</head>
+
+<body>
+<div class="topnav">
+	<div class = "search-container">
+    	<img src="Logo.PNG" width="200" height="200" class="fa-plus" align="middle">
+    	<form action="/action_page.php">
+			<input type="text" placeholder="Search.." name="search" />
+    		<button type="submit"><img src="search.png" width="25" height="25"/></button>
+		  	<img src="user.png" alt="" width="25" height="25" />	  <img src="cart.png" alt="" width="25" height="25" /> <img src="heart.png" alt="" width="25" height="25" />
+    	</form>
+ 	</div>
+</div>
+<!--nav Bar-->
+<ul>
+	<li><a href="">Category1</a></li>
+	<li><a href="">Category2</a></li>
+	<li><a href="">Category3</a></li>
+	<li><a href="">Category4</a></li>
+	<li><a href="">Category5</a></li>
+	<li><a href="">Category6</a></li>
+	<li><a href="">Category5</a></li>
+	<li><a href="">Category6</a></li>
+</ul>
+<!--The SlideShow-->
+<div class="slideshow-container">
+	<div class="mySlides fade">
+  		<div class="numbertext">1 / 3</div>
+  		<img src="Logo.PNG" style="width:100%">
+  		<div class="text">Picture 1</div>
+	</div>
+	<div class="mySlides fade">
+  		<div class="numbertext">2 / 3</div>
+ 	 	<img src="Logo.PNG" style="width:100%">
+ 	 	<div class="text">Picture 2</div>
+	</div>
+	<div class="mySlides fade">
+  		<div class="numbertext">3 / 3</div>
+  		<img src="Logo.PNG" style="width:100%">
+  		<div class="text">Picture 3</div>
+	</div>
+</div>
+<br>
+<div style="text-align:center">
+	<span class="dot"></span> 
+	<span class="dot"></span> 
+	<span class="dot"></span> 
+</div>
+    
+<script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+	var i;
+	var slides = document.getElementsByClassName("mySlides");
+	var dots = document.getElementsByClassName("dot");
+	for (i = 0; i < slides.length; i++) {
+		slides[i].style.display = "none";  
+  	}
+  	slideIndex++;
+  	if (slideIndex > slides.length) {slideIndex = 1}    
+  	for (i = 0; i < dots.length; i++) {
+    	dots[i].className = dots[i].className.replace(" active", "");
+  	}
+  	slides[slideIndex-1].style.display = "block";  
+  	dots[slideIndex-1].className += " active";
+  	setTimeout(showSlides, 2000); // Change image every 2 seconds
+	}
+</script>
+</body>
+<foot>
+</foot>
+</html>
